-----------------
HISTORY OF FMEDIA
-----------------

 "+" - new feature
 "*" - change, update or a small improvement
 "-" - bugfix
 "!" - broken compatibility


fmedia v0.25 - Mar 27, 2017

 + Linux: Pulse Audio playback
   Must be enabled manually in fmedia.conf, because ALSA is used by default.
 + Musepack seeking

 *! core: Windows: fmedia can run from %APPDATA%/fmedia directory
    Rename optional configuration files:
     fmedia-user.conf -> fmedia-ext.conf
     %APPDATA%/fmedia/fmedia.conf -> %APPDATA%/fmedia/fmedia-user.conf

 + GUI: add Record -> "Select Audio Device" command
 * GUI convert: add more codec settings
 - plist.dir: fix segfault on auto-expanding sub-directories
 - plist: fix segfault on parsing large .m3u/.pls files
 - net.icy: "--out-copy" didn't work if server doesn't send ICY meta data
 - net.icy: "--stream-copy" & "--out-copy" didn't work (v0.22 bug)


fmedia v0.24 - Feb 25, 2017

 + Musepack input (no seeking)

 - MPEG: ID3v2 write: invalid COMM frame was generated
 - core: --out=.EXT didn't work (v0.22 bug)
 * complete build for i686


fmedia v0.23 - Jan 24, 2017

 + GUI: save/load current playlist on exit/start ("autosave_playlists" config setting)
 + MPEG stream copy: copy ID3 tags
 * MPEG: use separate filters mpeg.in and mpeg.decode
 * MPEG: ID3v2.3 parse: support extended header
 * MPEG: ID3v2.4 parse: support 'data length indicator'
 + plist.dir: expand sub-directories
 * core: move soxr convertor to a separate module
   fmedia can run without any 3rd-party libraries.  Remove all unneeded modules from fmedia.conf if you need a tiny package with core functions only.
 * fmedia can be built for i686 CPU without 3rd-party libraries


fmedia v0.22 - Dec 25, 2016

 + WASAPI: support loopback mode (record from playback)
 + fmedia: add "--dev-loopback" argument
 + core: support reading from stdin (@stdin.EXT) (WAV) (synchronous)
 + core: support writing to stdout (--out=@stdout.EXT) (WAV, FLAC, OGG)