@@ -1,4 +1,4 @@
-# fmedia v0.25
+# fmedia v0.26
 
 
 # codepage for non-Unicode text: win1251 | win1252
